# realtime-chat

./: README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: models.py  session.py
backend/app/routers/: auth.py  chats.py
backend/app/schemas/: auth.py  chat.py  message.py  ws.py
backend/app/services/: presence.py  redis_pubsub.py  ws_manager.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: auth.ts  chats.ts  http.ts
frontend/src/components/: ChatWindow.tsx
frontend/src/pages/: Chats.tsx  Login.tsx
frontend/src/ws/: client.ts  types.ts
